--- a/packages/quick-ex/package.json
+++ b/packages/quick-ex/package.json
@@ -47,7 +47,9 @@
   "dependencies": {
     "@types/pg": "^8.11.10",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "inquirer": "^12.3.1",
+    "mysql2": "^3.12.0",
     "pg": "^8.13.1"
   }
 }
