--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quick-ex-db",
   "private": false,
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A CLI tool to quickly scaffold an Express.js server with a database",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,7 @@
     "express",
     "server"
   ],
-  "author": "Terry Ward",
+  "author": "TTibbs <wtibbs@proton.me>",
   "license": "MIT",
   "type": "module",
   "bugs": {
