--- a/packages/create-mvc/package.json
+++ b/packages/create-mvc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-mvc-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "./dist/index.js",
   "type": "module",
   "bin": {
@@ -14,14 +14,13 @@
     "url": "git+https://github.com/TTibbs/create-mvc-server.git",
     "directory": "packages/create-mvc"
   },
-  "homepage": "https://quick-ex-db-fe.vercel.app/",
+  "homepage": "https://create-mvc-server.vercel.app/",
   "bugs": {
     "url": "https://github.com/TTibbs/create-mvc-server/issues"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/index.js",
-    "test": "jest"
+    "start": "node ./dist/index.js"
   },
   "keywords": [
     "cli",
@@ -48,7 +47,6 @@
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "unbuild": "^3.2.0",
-    "vitest": "^2.1.8"
+    "unbuild": "^3.2.0"
   }
 }
