--- a/packages/create-mvc/tsconfig.json
+++ b/packages/create-mvc/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "include": ["build.config.ts", "src"],
   "compilerOptions": {
-    "outDir": "dist",
-    "target": "ES2022",
+    "target": "ES2020",
     "module": "ES2020",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "declaration": false,
-    "sourceMap": false,
-    "noUnusedLocals": true,
-    "esModuleInterop": true
-  }
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
