--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "create-mvc",
+  "name": "create-mvc-playground",
   "version": "1.0.0",
+  "main": "./dist/index.js",
   "type": "module",
   "bin": {
-    "create-mvc": "./dist/index.js"
-  },
-  "files": [
-    "dist",
-    "template-*"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc -w"
+    "create-mvc-playground": "./index.js"
   },
   "author": "TTibbs <wtibbs@proton.me>",
   "license": "MIT",
@@ -19,11 +12,15 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TTibbs/create-mvc-server.git",
-    "directory": "packages/create-mvc"
+    "directory": "packages/playground"
   },
   "homepage": "https://create-mvc-server.vercel.app/",
   "bugs": {
     "url": "https://github.com/TTibbs/create-mvc-server/issues"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [
     "cli",
