--- a/packages/create-mvc/package.json
+++ b/packages/create-mvc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-mvc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "bin": {
     "create-mvc": "./dist/index.js"
@@ -33,20 +33,20 @@
   ],
   "dependencies": {
     "@types/pg": "^8.11.10",
+    "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "inquirer": "^12.3.1",
+    "minimist": "^1.2.8",
     "mysql2": "^3.12.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "picocolors": "^1.1.1",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.6",
     "@types/minimist": "^1.2.5",
     "@types/prompts": "^2.4.9",
-    "cross-spawn": "^7.0.6",
-    "minimist": "^1.2.8",
-    "picocolors": "^1.1.1",
-    "prompts": "^2.4.2",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
