--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-mvc-server",
   "private": false,
-  "version": "1.0.8",
+  "version": "1.0.9",
   "type": "module",
   "bin": {
     "create-mvc-server": "./packages/create-mvc/index.js",
@@ -26,7 +26,9 @@
     "url": "https://github.com/TTibbs/create-mvc-server/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd packages/create-mvc && npm run build",
+    "prepare": "npm run build"
   },
   "keywords": [
     "cli",
@@ -34,6 +36,17 @@
     "database",
     "scaffolding"
   ],
+  "dependencies": {
+    "cross-spawn": "^7.0.6",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "inquirer": "^12.3.1",
+    "minimist": "^1.2.8",
+    "mysql2": "^3.12.0",
+    "pg": "^8.13.1",
+    "picocolors": "^1.1.1",
+    "prompts": "^2.4.2"
+  },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
