--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "scaffolding"
   ],
   "dependencies": {
+    "boxen": "^8.0.1",
     "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "figures": "^6.1.0",
     "inquirer": "^12.3.1",
     "minimist": "^1.2.8",
     "mysql2": "^3.12.0",
+    "ora": "^8.2.0",
     "pg": "^8.13.1",
     "picocolors": "^1.1.1",
     "prompts": "^2.4.2"
