--- a/packages/playground/template-sqlite-ts/package.json
+++ b/packages/playground/template-sqlite-ts/package.json
@@ -1,15 +1,25 @@
 {
   "name": "template-sqlite-ts",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "start": "node dist/server.js",
+    "dev": "ts-node server.ts",
+    "build": "tsc",
+    "watch": "nodemon --exec ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "express",
+    "sqlite",
+    "typescript",
+    "api",
+    "mvc"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
+  "description": "A TypeScript Express API with SQLite database using the MVC pattern",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -19,6 +29,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "@types/sqlite3": "^3.1.11",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.7.3"
   }
 }
