--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-mvc-server",
   "private": false,
-  "version": "1.1.3",
+  "version": "1.1.4",
   "type": "module",
   "bin": {
     "create-mvc-server": "./packages/create-mvc/index.js"
@@ -37,23 +37,44 @@
   ],
   "dependencies": {
     "boxen": "^8.0.1",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "figures": "^6.1.0",
     "inquirer": "^12.3.1",
     "minimist": "^1.2.8",
     "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
     "ora": "^8.2.0",
-    "pg": "^8.13.1",
+    "pg": "^8.14.1",
+    "pg-format": "^1.0.4",
     "picocolors": "^1.1.1",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.5",
+    "@types/pg": "^8.11.11",
+    "@types/pg-format": "^1.0.5",
+    "@types/supertest": "^6.0.3",
+    "jest-extended": "^4.0.2",
+    "jest-sorted": "^1.0.15",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "jest-extended/all",
+      "jest-sorted"
+    ]
   }
 }
